fix: Align components

--- a/src/app/modules/portfolio/components/about/about.component.scss
+++ b/src/app/modules/portfolio/components/about/about.component.scss
@@ -11,13 +11,15 @@
         max-width: 400px;
         margin-left: 30%;
         opacity: 0.3;
+        overflow: hidden;
     }
 
     .about-info {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 0.5rem;
+        gap: 3rem;
+        padding: 3rem;
 
         h3, p {
             color: var(--primary-font);
