--- a/src/app/modules/portfolio/components/experiences-carousel/experiences-carousel.component.scss
+++ b/src/app/modules/portfolio/components/experiences-carousel/experiences-carousel.component.scss
@@ -1,5 +1,8 @@
 .keen-slider {
     .card {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
         width: 100%;
         height: 150px;
         max-width: 200px;
