--- a/src/app/modules/portfolio/components/footer/footer.component.scss
+++ b/src/app/modules/portfolio/components/footer/footer.component.scss
@@ -1,4 +1,7 @@
 footer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
