--- a/src/app/modules/portfolio/components/projects/projects.component.scss
+++ b/src/app/modules/portfolio/components/projects/projects.component.scss
@@ -42,6 +42,7 @@ section {
 
 @media (max-width: 750px) {
     section {
+        padding: 0 20px 50px 20px;
         .title {
             font-size: 2rem;
         }
