--- a/src/app/modules/portfolio/components/technologies/technologies.component.scss
+++ b/src/app/modules/portfolio/components/technologies/technologies.component.scss
@@ -2,7 +2,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 
     padding: 100px 30px; 
 
